fix: adjust gap of tasks list according to previous pages

--- a/styles/tasks.css
+++ b/styles/tasks.css
@@ -25,7 +25,7 @@
 .tasks {
   display: flex;
   flex-direction: column;
-  gap: 1.75rem;
+  gap: 1.5rem;
 }
 
 .task {
